--- a/TheoryWorld.ipynb
+++ b/TheoryWorld.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 247,
+      "execution_count": 258,
       "metadata": {
         "id": "BgCeufQyHN_m"
       },
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 248,
+      "execution_count": 259,
       "metadata": {
         "id": "eMVERGNANpbj"
       },
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 249,
+      "execution_count": 260,
       "metadata": {
         "id": "HDwZHdyC5x5G"
       },
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 250,
+      "execution_count": 261,
       "metadata": {
         "id": "pvZyFpr_51Tf"
       },
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 251,
+      "execution_count": 262,
       "metadata": {
         "id": "VyNEz_PP54Qj"
       },
@@ -220,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 252,
+      "execution_count": 263,
       "metadata": {
         "id": "Nu_aXXIu57-n"
       },
@@ -281,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 253,
+      "execution_count": 264,
       "metadata": {
         "id": "RWXy8y1s558P"
       },
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 254,
+      "execution_count": 265,
       "metadata": {
         "id": "zLjhmrXfeJC4"
       },
@@ -443,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 255,
+      "execution_count": 266,
       "metadata": {
         "id": "1w3M5Gw_mZc8"
       },
@@ -590,7 +590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 256,
+      "execution_count": 267,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -599,18 +599,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 257,
+      "execution_count": 268,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "TheAlgonauts_small3\n",
-            "\t 5 : 300000\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "small_ins,medium_ins,large_ins = load_all_lists()\n",
         "sin_dict, min_dict, ldict = load_all_dicts()\n",
@@ -666,7 +657,7 @@
         "        \n",
         "\n",
         "\n",
-        "run(unfinished_small_ins,efficiency_ids_sum,300000)\n",
+        "#run(unfinished_small_ins,efficiency_ids_sum,300000)\n",
         "#run(unfinished_medium_ins,efficiency_ids_sum,10000*4)\n",
         "#run(unfinished_large_ins,efficiency_ids_sum,500*2)"
       ]
@@ -680,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 269,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -745,7 +736,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 270,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1142,16 +1133,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 271,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "🔥SuperSickFireDubDestroyers🔥_small3 276 315\n",
-            "big(O)_medium1 47165 47571\n",
-            "admin_medium3 117873 119627\n"
+            "RMG_small2 3180 3432\n",
+            "RMG_medium3 5049 5940\n",
+            "RMG_medium2 6160 7420\n",
+            "PineappleParty_medium1 18308 18985\n",
+            "RMG_large3 18864 24801\n",
+            "RMG_large2 16236 21051\n",
+            "admin_large3 170736 171379\n"
           ]
         }
       ],
