--- a/TheoryWorld.ipynb
+++ b/TheoryWorld.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 258,
+      "execution_count": 346,
       "metadata": {
         "id": "BgCeufQyHN_m"
       },
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 259,
+      "execution_count": 347,
       "metadata": {
         "id": "eMVERGNANpbj"
       },
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 260,
+      "execution_count": 348,
       "metadata": {
         "id": "HDwZHdyC5x5G"
       },
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 261,
+      "execution_count": 349,
       "metadata": {
         "id": "pvZyFpr_51Tf"
       },
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 262,
+      "execution_count": 350,
       "metadata": {
         "id": "VyNEz_PP54Qj"
       },
@@ -220,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 263,
+      "execution_count": 351,
       "metadata": {
         "id": "Nu_aXXIu57-n"
       },
@@ -281,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 264,
+      "execution_count": 352,
       "metadata": {
         "id": "RWXy8y1s558P"
       },
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 265,
+      "execution_count": 353,
       "metadata": {
         "id": "zLjhmrXfeJC4"
       },
@@ -443,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 266,
+      "execution_count": 354,
       "metadata": {
         "id": "1w3M5Gw_mZc8"
       },
@@ -590,7 +590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 267,
+      "execution_count": 355,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -599,7 +599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 268,
+      "execution_count": 356,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -671,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 269,
+      "execution_count": 357,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -736,7 +736,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 270,
+      "execution_count": 358,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1128,36 +1128,103 @@
         "      if i in next:\n",
         "        next.remove(i)\n",
         "\n",
+        "  return (total_utility, path)\n",
+        "\n",
+        "#GREEDY 3.0\n",
+        "#greedy 2.0 but with a group of 3\n",
+        "def next_best_efficiency1(att,path,prev_t,total_time,attractions):\n",
+        "  t = prev_t + total_time\n",
+        "  curr_x = att.x\n",
+        "  curr_y = att.y\n",
+        "  next = valid_attractions(curr_x, curr_y, t, attractions)\n",
+        "  for i in path:\n",
+        "    if i in next:\n",
+        "      next.remove(i)\n",
+        "  if att in next:\n",
+        "    next.remove(att)\n",
+        "\n",
+        "  max_efficiency = 0.0\n",
+        "\n",
+        "  for a in next:\n",
+        "    travel_to = a.travel_time(curr_x,curr_y)\n",
+        "    arrival_time = t + travel_to\n",
+        "    total_time = travel_to + (max(arrival_time,a.o)-arrival_time) + a.t\n",
+        "    if total_time != 0:\n",
+        "      efficiency = a.u / total_time\n",
+        "    else:\n",
+        "      efficiency = a.u / 0.0000000001\n",
+        "\n",
+        "    next_efficiency = next_best_efficiency1(a, path, t, total_time, attractions)\n",
+        "    avg_efficiency = 0.0\n",
+        "    avg_efficiency = (efficiency + next_efficiency)/2\n",
+        "\n",
+        "    if avg_efficiency > max_efficiency:\n",
+        "      max_efficiency = efficiency\n",
+        "\n",
+        "  return max_efficiency\n",
+        "  \n",
+        "\n",
+        "def greedy_path_group1(attractions):\n",
+        "  path=[]\n",
+        "  total_utility=0\n",
+        "  t=0\n",
+        "  curr_x=200\n",
+        "  curr_y=200\n",
+        "  #next is the array of attractions which are valid to visit next\n",
+        "  next = valid_attractions(curr_x, curr_y, t, attractions)\n",
+        "  while len(next) > 0:\n",
+        "    max_efficiency = 0.0\n",
+        "    next_attraction = None\n",
+        "    end_time = t\n",
+        "\n",
+        "    #goes to attraction with highest effiency\n",
+        "    for a in next:\n",
+        "      travel_to = a.travel_time(curr_x,curr_y)\n",
+        "      arrival_time = t + travel_to\n",
+        "      #total time is the time to get there, the wait time, and time at attraction\n",
+        "      total_time = travel_to + (max(arrival_time,a.o)-arrival_time) + a.t\n",
+        "      if total_time != 0:\n",
+        "        efficiency = a.u / total_time\n",
+        "      else:\n",
+        "        efficiency = a.u / 0.0000000001\n",
+        "      \n",
+        "      next_efficiency = next_best_efficiency1(a, path, t, total_time, attractions)\n",
+        "      avg_efficiency = 0.0\n",
+        "      avg_efficiency = (efficiency + 2*next_efficiency)/3\n",
+        "\n",
+        "      if avg_efficiency > max_efficiency:\n",
+        "        max_efficiency = avg_efficiency\n",
+        "        next_attraction = a\n",
+        "        end_time = t + total_time\n",
+        "\n",
+        "    #updating variables\n",
+        "    path.append(next_attraction)\n",
+        "    total_utility = total_utility + next_attraction.u\n",
+        "    t = end_time\n",
+        "    curr_x = next_attraction.x\n",
+        "    curr_y = next_attraction.y\n",
+        "    next = valid_attractions(curr_x,curr_y,t,attractions)\n",
+        "    for i in path:\n",
+        "      if i in next:\n",
+        "        next.remove(i)\n",
+        "\n",
         "  return (total_utility, path)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 271,
+      "execution_count": 359,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "RMG_small2 3180 3432\n",
-            "RMG_medium3 5049 5940\n",
-            "RMG_medium2 6160 7420\n",
-            "PineappleParty_medium1 18308 18985\n",
-            "RMG_large3 18864 24801\n",
-            "RMG_large2 16236 21051\n",
-            "admin_large3 170736 171379\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "for tag,score in small_results + medium_results + large_results:\n",
         "    attractions = input_to_attractions(\"./all_inputs/\"+tag+\".in\")\n",
-        "    gp = greedy_path_group(attractions)\n",
+        "    gp = greedy_path_group1(attractions)\n",
         "    if score < gp[0]:\n",
         "        print(tag,score,gp[0])\n",
         "        ids = list(map(lambda x:get_id(x,attractions),gp[1]))\n",
-        "        attractions_to_output(ids,tag,\"\")"
+        "        #Add valid check\n",
+        "            #attractions_to_output(ids,tag,\"\")"
       ]
     },
     {
