Some more maxes

--- a/TheoryWorld.ipynb
+++ b/TheoryWorld.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 208,
+      "execution_count": 565,
       "metadata": {
         "id": "BgCeufQyHN_m"
       },
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 209,
+      "execution_count": 566,
       "metadata": {
         "id": "eMVERGNANpbj"
       },
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 210,
+      "execution_count": 567,
       "metadata": {
         "id": "HDwZHdyC5x5G"
       },
@@ -119,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 211,
+      "execution_count": 568,
       "metadata": {
         "id": "pvZyFpr_51Tf"
       },
@@ -193,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 212,
+      "execution_count": 569,
       "metadata": {
         "id": "VyNEz_PP54Qj"
       },
@@ -234,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 213,
+      "execution_count": 570,
       "metadata": {
         "id": "Nu_aXXIu57-n"
       },
@@ -283,6 +283,7 @@
         "  for id in attraction_ids:\n",
         "    l = is_legit(attractions[id],x,y,t)\n",
         "    if l[0] == -1:\n",
+        "      #print(\"fail point:\",id)\n",
         "      return False\n",
         "    else:\n",
         "      x,y,t = l\n",
@@ -302,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 214,
+      "execution_count": 571,
       "metadata": {
         "id": "RWXy8y1s558P"
       },
@@ -343,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 215,
+      "execution_count": 572,
       "metadata": {
         "id": "zLjhmrXfeJC4"
       },
@@ -496,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 216,
+      "execution_count": 573,
       "metadata": {
         "id": "1w3M5Gw_mZc8"
       },
@@ -573,7 +574,7 @@
         "          print(\"shh\")\n",
         "          return max_utility_path([i],attractions)\n",
         "    if rank != None:\n",
-        "      valids.sort(key=lambda x: capping_function(x,attractions),reverse=False)\n",
+        "      valids.sort(key=lambda x: capping_function(x,attractions),reverse=True)\n",
         "      valids = valids[:rank]\n",
         "      #for i in valids[:3]:\n",
         "      #  print(capping_function(i,attractions))\n",
@@ -587,10 +588,10 @@
         "  all_paths = valid_ids.copy()\n",
         "  \n",
         "  while(len(valid_ids) != 0):\n",
-        "    #print(len(all_paths[-1]),\":\",len(valid_ids))\n",
+        "    print(len(all_paths[-1]),\":\",len(valid_ids))\n",
         "    valid_ids = longer_fast(attractions,valid_ids,valid_ids)\n",
         "    if rank != None:\n",
-        "      valid_ids.sort(key=lambda x: utility_ids_sum(x,attractions),reverse=False)\n",
+        "      valid_ids.sort(key=lambda x: utility_ids_sum(x,attractions),reverse=True)\n",
         "      valid_ids = valid_ids[:rank]\n",
         "    all_paths += valid_ids\n",
         "  \n",
@@ -645,7 +646,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 217,
+      "execution_count": 574,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -654,164 +655,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 218,
+      "execution_count": 575,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "fail point: 0\n",
             "[]\n",
-            "4 11 49\n",
-            "Moyai_large3\n",
-            "\t 2 : 600\n",
-            "\t 4 : 600\n",
-            "\t 6 : 600\n",
-            "\t 8 : 600\n",
-            "\t 10 : 600\n",
-            "\t 12 : 600\n",
-            "\t 14 : 600\n",
-            "\t 16 : 600\n",
-            "\t 18 : 600\n",
-            "\t 20 : 600\n",
-            "\t 22 : 600\n",
-            "\tmax: 376674\n",
-            "\tthis: 312378\n",
-            "TheAlgonauts_large2\n",
-            "\t 2 : 600\n",
-            "\t 4 : 600\n",
-            "\t 6 : 600\n",
-            "\t 8 : 600\n",
-            "\t 10 : 600\n",
-            "\t 12 : 600\n",
-            "\t 14 : 600\n",
-            "\t 16 : 600\n",
-            "\t 18 : 600\n",
-            "\t 20 : 600\n",
-            "\t 22 : 600\n",
-            "\t 24 : 600\n",
-            "\t 26 : 600\n",
-            "\t 28 : 600\n",
-            "\t 30 : 600\n",
-            "\t 32 : 600\n",
-            "\t 34 : 600\n",
-            "\t 36 : 600\n",
-            "\t 38 : 600\n",
-            "\t 40 : 600\n",
-            "\t 42 : 600\n",
-            "\t 44 : 600\n",
-            "\t 46 : 600\n",
-            "\t 48 : 600\n",
-            "\t 50 : 600\n",
-            "\t 52 : 600\n",
-            "\t 54 : 600\n",
-            "\t 56 : 600\n",
-            "\t 58 : 600\n",
-            "\t 60 : 120\n",
-            "\tmax: 1544987\n",
-            "\tthis: 1235954\n",
-            "MonkeysatTypewriters_large3\n",
-            "\t 2 : 600\n",
-            "\t 4 : 600\n",
-            "\t 6 : 600\n",
-            "\t 8 : 600\n",
-            "\t 10 : 600\n",
-            "\t 12 : 600\n",
-            "\t 14 : 600\n",
-            "\t 16 : 600\n",
-            "\t 18 : 131\n",
-            "\tmax: 116783\n",
-            "\tthis: 103117\n",
-            "[noname]_large3\n",
-            "\t 2 : 600\n",
-            "\t 4 : 600\n",
-            "\t 6 : 600\n",
-            "\t 8 : 600\n",
-            "\t 10 : 600\n",
-            "\t 12 : 600\n",
-            "\t 14 : 600\n",
-            "\t 16 : 600\n",
-            "\t 18 : 600\n",
-            "\t 20 : 600\n",
-            "\t 22 : 600\n",
-            "\t 24 : 600\n",
-            "\t 26 : 600\n",
-            "\t 28 : 600\n",
-            "\t 30 : 600\n",
-            "\t 32 : 600\n",
-            "\t 34 : 600\n",
-            "\t 36 : 600\n",
-            "\t 38 : 600\n",
-            "\t 40 : 600\n",
-            "\t 42 : 600\n",
-            "\t 44 : 600\n",
-            "\t 46 : 600\n",
-            "\t 48 : 600\n",
-            "\t 50 : 600\n",
-            "\t 52 : 600\n",
-            "\t 54 : 600\n",
-            "\t 56 : 600\n",
-            "\t 58 : 600\n",
-            "\t 60 : 600\n",
-            "\t 62 : 600\n",
-            "\t 64 : 600\n",
-            "\t 66 : 600\n",
-            "\t 68 : 600\n",
-            "\t 70 : 600\n",
-            "\t 72 : 600\n",
-            "\t 74 : 600\n",
-            "\t 76 : 600\n",
-            "\t 78 : 600\n",
-            "\t 80 : 600\n",
-            "\t 82 : 600\n",
-            "\t 84 : 600\n",
-            "\t 86 : 600\n",
-            "\t 88 : 600\n",
-            "\t 90 : 600\n",
-            "\t 92 : 600\n",
-            "\t 94 : 600\n",
-            "\t 96 : 600\n",
-            "\t 98 : 600\n",
-            "\t 100 : 600\n",
-            "\t 102 : 192\n",
-            "\tmax: 29670\n",
-            "\tthis: 27869\n",
-            "Dijkstra'sDisciples_large2\n",
-            "\t 2 : 600\n",
-            "\t 4 : 600\n",
-            "\t 6 : 600\n",
-            "\t 8 : 600\n",
-            "\t 10 : 600\n",
-            "\t 12 : 600\n",
-            "\t 14 : 600\n",
-            "\t 16 : 600\n",
-            "\t 18 : 600\n",
-            "\t 20 : 600\n",
-            "\t 22 : 600\n",
-            "\t 24 : 600\n",
-            "\t 26 : 600\n",
-            "\t 28 : 3\n",
-            "\tmax: 48190\n",
-            "\tthis: 24400\n",
-            "🔥SuperSickFireDubDestroyers🔥_large3\n",
-            "\t 2 : 600\n",
-            "\t 4 : 600\n",
-            "\t 6 : 600\n",
-            "\t 8 : 600\n",
-            "\t 10 : 600\n",
-            "\t 12 : 600\n",
-            "\t 14 : 600\n",
-            "\t 16 : 600\n",
-            "\t 18 : 600\n",
-            "\t 20 : 600\n",
-            "\t 22 : 600\n",
-            "\t 24 : 600\n",
-            "\t 26 : 600\n",
-            "\t 28 : 600\n",
-            "\t 30 : 600\n",
-            "\t 32 : 600\n",
-            "\t 34 : 600\n",
-            "\t 36 : 600\n"
+            "fail point: 0\n",
+            "False\n",
+            "3 11 47\n"
           ]
         }
       ],
@@ -853,9 +708,12 @@
         "        unfinished_large_ins.append(i)\n",
         "\n",
         "\n",
+        "#print(len(load_output(\"outputs2/Dijkstra'sDisciples_medium1.out\")))\n",
+        "#print(is_legit_ids(load_output(\"outputs2/Dijkstra'sDisciples_medium1.out\"),min_dict[\"Dijkstra'sDisciples_medium1\"]))\n",
+        "#print_attractions_with_id(min_dict[\"Dijkstra'sDisciples_medium1\"],min_dict[\"Dijkstra'sDisciples_medium1\"])\n",
         "\n",
         "#print(count)\n",
-        "print(len(unfinished_small_ins),len(unfinished_medium_ins),len(unfinished_large_ins))\n",
+        "#print(len(unfinished_small_ins),len(unfinished_medium_ins),len(unfinished_large_ins))\n",
         "#print(list(map(lambda x: x[0],unfinished_small_ins)))\n",
         "def run(parks,capping_function,rank=None):\n",
         "    for a in parks:\n",
@@ -867,9 +725,10 @@
         "        print(\"\\tmax:\",MAXES[a[0]])\n",
         "        print(\"\\tthis:\",utility_ids_sum(bp,attractions))\n",
         "        \n",
+        "#run([(\"Dijkstra'sDisciples_medium1\",min_dict[\"Dijkstra'sDisciples_medium1\"])],efficiency_ids_sum)\n",
         "#run(unfinished_small_ins,efficiency_ids_sum, 100000) # 100000\n",
-        "#run(unfinished_medium_ins,efficiency_ids_sum,10000) # 10000\n",
-        "run(unfinished_large_ins,time_ids_sum,600) # 600"
+        "#run(unfinished_medium_ins,efficiency_ids_sum,12000) # 10000\n",
+        "#run(unfinished_large_ins,efficiency_ids_sum,900) # 600"
       ]
     },
     {
@@ -881,7 +740,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 576,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -946,7 +805,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 577,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1423,7 +1282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 578,
       "metadata": {},
       "outputs": [],
       "source": [
