--- a/TheoryWorld copy.ipynb
+++ b/TheoryWorld copy.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 607,
+      "execution_count": 565,
       "metadata": {
         "id": "BgCeufQyHN_m"
       },
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 608,
+      "execution_count": 566,
       "metadata": {
         "id": "eMVERGNANpbj"
       },
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 609,
+      "execution_count": 567,
       "metadata": {
         "id": "HDwZHdyC5x5G"
       },
@@ -119,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 610,
+      "execution_count": 568,
       "metadata": {
         "id": "pvZyFpr_51Tf"
       },
@@ -193,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 611,
+      "execution_count": 569,
       "metadata": {
         "id": "VyNEz_PP54Qj"
       },
@@ -234,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 612,
+      "execution_count": 570,
       "metadata": {
         "id": "Nu_aXXIu57-n"
       },
@@ -303,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 613,
+      "execution_count": 571,
       "metadata": {
         "id": "RWXy8y1s558P"
       },
@@ -344,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 614,
+      "execution_count": 572,
       "metadata": {
         "id": "zLjhmrXfeJC4"
       },
@@ -497,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 615,
+      "execution_count": 573,
       "metadata": {
         "id": "1w3M5Gw_mZc8"
       },
@@ -646,7 +646,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 616,
+      "execution_count": 574,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -655,15 +655,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 617,
+      "execution_count": 575,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "fail point: 0\n",
             "[]\n",
-            "['Moyai_large3', 'TheAlgonauts_large2', 'MonkeysatTypewriters_large3', '[noname]_large3', \"Dijkstra'sDisciples_large2\", '🔥SuperSickFireDubDestroyers🔥_large3', 'Max&Dan_large2', \"Dijkstra'sDisciples_large3\", 'Cows3.0_large1', '🔥SuperSickFireDubDestroyers🔥_large2', 'Max&Dan_large3', 'RubberDucks_large3', 'LukeMaier_large1', 'soup_large3', 'Moyai_large2', 'TheAlgonauts_large3', 'MonkeysatTypewriters_large2', '[noname]_large2', 'DisjoinandCrush_large2', 'tmj_large3', 'Jade_large1', 'ALLINA_large1', 'QuantumBogosort_large2', 'BillySlayers_large2', 'Jade_large2', 'IcameIdividedIconquered_large3', 'BestFriendSquad(BFS)_large1', 'FastPass_large2', 'Jade_large3', 'Cows3.0_large2', '🔥SuperSickFireDubDestroyers🔥_large1', 'thecoolguys_large3', 'Moyai_large1', 'PineappleParty_large2', 'big(O)_large2', '[noname]_large1', 'thecoolguys_large2', 'TheAlgonauts_large1', 'BroCode_large2', 'PineappleParty_large3', \"Dijkstra'sDisciples_large1\", 'Max&Dan_large1', 'TheoryofAlgo-holics_large3', 'RubberDucks_large1', 'LukeMaier_large3', 'JohnJohnJohn_large3']\n"
+            "fail point: 0\n",
+            "False\n",
+            "3 11 47\n"
           ]
         }
       ],
@@ -722,7 +725,6 @@
         "        print(\"\\tmax:\",MAXES[a[0]])\n",
         "        print(\"\\tthis:\",utility_ids_sum(bp,attractions))\n",
         "        \n",
-        "print(list(map(lambda x: x[0],unfinished_large_ins)))\n",
         "#run([(\"Dijkstra'sDisciples_medium1\",min_dict[\"Dijkstra'sDisciples_medium1\"])],efficiency_ids_sum)\n",
         "#run(unfinished_small_ins,efficiency_ids_sum, 100000) # 100000\n",
         "#run(unfinished_medium_ins,efficiency_ids_sum,12000) # 10000\n",
@@ -738,7 +740,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 618,
+      "execution_count": 576,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -803,7 +805,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 619,
+      "execution_count": 577,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1280,7 +1282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 620,
+      "execution_count": 578,
       "metadata": {},
       "outputs": [],
       "source": [
