--- a/TheoryWorld.ipynb
+++ b/TheoryWorld.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 607,
+      "execution_count": 51,
       "metadata": {
         "id": "BgCeufQyHN_m"
       },
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 608,
+      "execution_count": 52,
       "metadata": {
         "id": "eMVERGNANpbj"
       },
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 609,
+      "execution_count": 53,
       "metadata": {
         "id": "HDwZHdyC5x5G"
       },
@@ -119,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 610,
+      "execution_count": 54,
       "metadata": {
         "id": "pvZyFpr_51Tf"
       },
@@ -193,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 611,
+      "execution_count": 55,
       "metadata": {
         "id": "VyNEz_PP54Qj"
       },
@@ -234,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 612,
+      "execution_count": 56,
       "metadata": {
         "id": "Nu_aXXIu57-n"
       },
@@ -303,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 613,
+      "execution_count": 57,
       "metadata": {
         "id": "RWXy8y1s558P"
       },
@@ -344,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 614,
+      "execution_count": 58,
       "metadata": {
         "id": "zLjhmrXfeJC4"
       },
@@ -497,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 615,
+      "execution_count": 59,
       "metadata": {
         "id": "1w3M5Gw_mZc8"
       },
@@ -565,7 +565,7 @@
         "  all_paths = single_ids(attractions)\n",
         "  \n",
         "  while len(valids) != 0:\n",
-        "    if len(all_paths[-1]) % 2 == 0:\n",
+        "    if len(all_paths[-1]) % 1 == 0:\n",
         "      print('\\t',len(all_paths[-1]),\":\",len(valids))\n",
         "    valids = one_longer(s_ids,attractions,valids)\n",
         "    if park != None:\n",
@@ -574,6 +574,12 @@
         "          print(\"shh\")\n",
         "          return max_utility_path([i],attractions)\n",
         "    if rank != None:\n",
+        "      new_valids = []\n",
+        "      #print(valids)\n",
+        "      for i in valids:\n",
+        "        if i[0] > 44:\n",
+        "          new_valids.append(i)\n",
+        "      valids = new_valids\n",
         "      valids.sort(key=lambda x: capping_function(x,attractions),reverse=True)\n",
         "      valids = valids[:rank]\n",
         "      #for i in valids[:3]:\n",
@@ -646,7 +652,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 616,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -655,7 +661,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 617,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [
         {
@@ -663,7 +669,47 @@
           "output_type": "stream",
           "text": [
             "[]\n",
-            "['Moyai_large3', 'TheAlgonauts_large2', 'MonkeysatTypewriters_large3', '[noname]_large3', \"Dijkstra'sDisciples_large2\", '🔥SuperSickFireDubDestroyers🔥_large3', 'Max&Dan_large2', \"Dijkstra'sDisciples_large3\", 'Cows3.0_large1', '🔥SuperSickFireDubDestroyers🔥_large2', 'Max&Dan_large3', 'RubberDucks_large3', 'LukeMaier_large1', 'soup_large3', 'Moyai_large2', 'TheAlgonauts_large3', 'MonkeysatTypewriters_large2', '[noname]_large2', 'DisjoinandCrush_large2', 'tmj_large3', 'Jade_large1', 'ALLINA_large1', 'QuantumBogosort_large2', 'BillySlayers_large2', 'Jade_large2', 'IcameIdividedIconquered_large3', 'BestFriendSquad(BFS)_large1', 'FastPass_large2', 'Jade_large3', 'Cows3.0_large2', '🔥SuperSickFireDubDestroyers🔥_large1', 'thecoolguys_large3', 'Moyai_large1', 'PineappleParty_large2', 'big(O)_large2', '[noname]_large1', 'thecoolguys_large2', 'TheAlgonauts_large1', 'BroCode_large2', 'PineappleParty_large3', \"Dijkstra'sDisciples_large1\", 'Max&Dan_large1', 'TheoryofAlgo-holics_large3', 'RubberDucks_large1', 'LukeMaier_large3', 'JohnJohnJohn_large3']\n"
+            "Dijkstra'sDisciples_medium1\n",
+            "\t 1 : 60\n",
+            "\t 2 : 885\n",
+            "\t 3 : 41157\n",
+            "\t 4 : 300000\n",
+            "\t 5 : 300000\n",
+            "\t 6 : 300000\n",
+            "\t 7 : 300000\n",
+            "\t 8 : 300000\n",
+            "\t 9 : 300000\n",
+            "\t 10 : 300000\n",
+            "\t 11 : 300000\n",
+            "\t 12 : 300000\n",
+            "\t 13 : 300000\n",
+            "\t 14 : 300000\n",
+            "\t 15 : 300000\n",
+            "\t 16 : 300000\n",
+            "\t 17 : 300000\n",
+            "\t 18 : 300000\n",
+            "\t 19 : 300000\n",
+            "\t 20 : 300000\n",
+            "\t 21 : 300000\n",
+            "\t 22 : 300000\n",
+            "\t 23 : 300000\n",
+            "\t 24 : 300000\n",
+            "\t 25 : 300000\n",
+            "\t 26 : 300000\n",
+            "\t 27 : 300000\n",
+            "\t 28 : 300000\n",
+            "\t 29 : 300000\n",
+            "\t 30 : 300000\n",
+            "\t 31 : 300000\n",
+            "\t 32 : 300000\n",
+            "\t 33 : 300000\n",
+            "\t 34 : 300000\n",
+            "\t 35 : 300000\n",
+            "\t 36 : 300000\n",
+            "\t 37 : 300000\n",
+            "\t 38 : 91000\n",
+            "\tmax: 3850\n",
+            "\tthis: 3400\n"
           ]
         }
       ],
@@ -722,8 +768,14 @@
         "        print(\"\\tmax:\",MAXES[a[0]])\n",
         "        print(\"\\tthis:\",utility_ids_sum(bp,attractions))\n",
         "        \n",
-        "print(list(map(lambda x: x[0],unfinished_large_ins)))\n",
-        "#run([(\"Dijkstra'sDisciples_medium1\",min_dict[\"Dijkstra'sDisciples_medium1\"])],efficiency_ids_sum)\n",
+        "\n",
+        "def dijkstra_capping(ids,attractions):\n",
+        "    if ids[0] > 44:\n",
+        "        return 1\n",
+        "    else:\n",
+        "        return 0\n",
+        "#print(list(map(lambda x: x[0],unfinished_large_ins)))\n",
+        "run([(\"Dijkstra'sDisciples_medium1\",min_dict[\"Dijkstra'sDisciples_medium1\"])],efficiency_ids_sum,300000)\n",
         "#run(unfinished_small_ins,efficiency_ids_sum, 100000) # 100000\n",
         "#run(unfinished_medium_ins,efficiency_ids_sum,12000) # 10000\n",
         "#run(unfinished_large_ins,efficiency_ids_sum,900) # 600"
@@ -738,7 +790,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 618,
+      "execution_count": 62,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -803,7 +855,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 619,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1280,7 +1332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 620,
+      "execution_count": 64,
       "metadata": {},
       "outputs": [],
       "source": [
